<resources>
    <string name="app_name">Atleta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="already_logged_in">You are already logged in.</string>
    <string name="file_provider_authority" translatable="false">com.atleta.fileprovider</string>
    <string name="image">image</string>
    <string name="title">title</string>
    <string name="description">Description</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob">Date of birth</string>
    <string name="login_id">Login ID</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="welcome">Welcome</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="create_password">Create Password</string>
    <string name="email_id">Email ID</string>
    <string name="sign_up_to_get_started">Sign up to get started</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="edit">Edit</string>
    <string name="logout_message">Are you sure you want to logout ?</string>
    <string name="coming_soon">Coming soon…</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="string_home">Home</string>
    <string name="string_feed">Feed</string>
    <string name="string_community">Community</string>
    <string name="string_message">Message</string>
    <string name="string_settings">Settings</string>
    <string name="string_logout">Logout</string>
    <string name="string_profile">My Profile</string>
    <string name="string_terms_of_use">Terms of Use</string>
    <string name="string_about_us">About Us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_developer_entry">DeveloperEntryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_add_feed">AddFeedActivity</string>
    <string name="string_progress_msg">Please wait…</string>

    <string-array name="community_topic">
        <item>Select topic</item>
        <item>Basketball</item>
        <item>Cricket</item>
        <item>Fitness</item>
        <item>Football</item>
    </string-array>

    <string-array name="community_scope">
        <item>Everyone</item>
        <item>Owner only</item>
        <item>Owner internal</item>
    </string-array>

    <string name="facebook_app_id">347094203513363</string>
    <string name="fb_login_protocol_scheme">fb347094203513363</string>
</resources>
