<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".fragments.SignInFragment">

    <ImageView
        android:id="@+id/dash_group_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:src="@drawable/dash_group" />

    <ImageView
        android:id="@+id/dash_group_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dash_group_1"
        android:padding="4dp"
        android:src="@drawable/dash_group" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ellipse_black" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ellipse_orange" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <com.atleta.customview.AtletaTextView
                        style="@style/AppTheme.TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up_text"
                        android:textColor="@android:color/black"
                        android:textFontWeight="700"
                        android:textSize="40sp"
                        app:appFont="Poppins-Bold" />

                    <com.atleta.customview.AtletaTextView
                        style="@style/AppTheme.TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up_to_get_started"
                        android:textColor="@android:color/black"
                        android:textSize="23sp"
                        app:appFont="Poppins-Regular" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <com.atleta.customview.AtletaTextView
                        style="@style/AppTheme.TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4sp"
                        android:text="Name"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        app:appFont="Poppins-Regular" />

                    <com.atleta.customview.AtletaEditText
                        android:id="@+id/edt_display_name"
                        style="@style/AppTheme.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_edit_text"
                        android:inputType="text"
                        android:padding="12dp"
                        android:text="name"
                        android:textColor="@android:color/black"
                        app:appFont="Poppins-Regular" />


                    <com.atleta.customview.AtletaTextView
                        style="@style/AppTheme.TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4sp"
                        android:text="@string/email_id"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        app:appFont="Poppins-Regular" />

                    <com.atleta.customview.AtletaEditText
                        android:id="@+id/edt_email_id"
                        style="@style/AppTheme.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_edit_text"
                        android:inputType="text"
                        android:padding="12dp"
                        android:text="name@gmail.com"
                        android:textColor="@android:color/black"
                        app:appFont="Poppins-Regular" />

                    <com.atleta.customview.AtletaTextView
                        style="@style/AppTheme.TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:padding="4sp"
                        android:text="@string/password"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        app:appFont="Poppins-Regular" />

                    <com.atleta.customview.AtletaEditText
                        android:id="@+id/edt_create_password"
                        style="@style/AppTheme.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_edit_text"
                        android:inputType="textPassword"
                        android:padding="12dp"
                        android:text="name"
                        android:textColor="@android:color/black"
                        app:appFont="Poppins-Regular" />

                    <com.atleta.customview.AtletaTextView
                        style="@style/AppTheme.TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:padding="4sp"
                        android:text="@string/gender"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        app:appFont="Poppins-Regular" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <com.atleta.customview.AtletaButton
                            android:id="@+id/btn_male"
                            style="@style/AppTheme.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="24dp"
                            android:background="@drawable/border_button_orange"
                            android:elevation="4dp"
                            android:text="Male"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white"
                            app:appFont="Poppins-Regular" />

                        <com.atleta.customview.AtletaButton
                            android:id="@+id/btn_female"
                            style="@style/AppTheme.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="24dp"
                            android:background="@drawable/border_button_black"
                            android:elevation="4dp"
                            android:text="Female"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white"
                            app:appFont="Poppins-Regular" />
                    </LinearLayout>

                    <com.atleta.customview.AtletaTextView
                        style="@style/AppTheme.TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:padding="4sp"
                        android:text="@string/dob"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        app:appFont="Poppins-Regular" />

                    <DatePicker
                        android:id="@+id/datePicker1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:datePickerMode="spinner"
                        android:calendarViewShown="false"/>
                    <com.atleta.customview.AtletaButton
                        android:id="@+id/btn_register"
                        style="@style/AppTheme.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="24dp"
                        android:layout_marginTop="18dp"
                        android:background="@drawable/border_button_orange"
                        android:elevation="4dp"
                        android:text="Next"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        app:appFont="Poppins-Regular" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <RadioGroup
                            android:id="@+id/rg_login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top|center"
                            android:orientation="horizontal"
                            android:paddingTop="@dimen/padding_default_double"
                            android:paddingBottom="@dimen/padding_default_double">

                            <RadioButton
                                android:id="@+id/rbtn_fb"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin_default"
                                android:layout_marginEnd="@dimen/margin_default"
                                android:button="@null"
                                android:drawableLeft="@drawable/ic_facebook" />

                            <RadioButton
                                android:id="@+id/rbtn_gplus"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin_default"
                                android:layout_marginEnd="@dimen/margin_default"
                                android:button="@null"
                                android:drawableLeft="@drawable/ic_google" />

                        </RadioGroup>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

    <com.atleta.customview.SpinnerView
        android:id="@+id/spinnerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="gone" />
</RelativeLayout>